# ui_api_tests_para_bank_reqres

./: .env  .gitignore  README.md  pyproject.toml
models/ui_pages/: account_page.py  authorization_page.py  base_page.py  lookup_page.py  registration_page.py
schemas/: login_failed.json  user_create.json
tests/: conftest.py  test_paral_bank_ui.py  test_reqres_api.py
utils/: attach.py  helper.py
